--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@axe-core/react": "^4.6.1",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "12.1.5",
     "@testing-library/react-hooks": "^8.0.1",
